--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -3,13 +3,13 @@
 <table>
   <thead>
     <tr>
-      <th> Nome </th>
-      <th> Valor</th>
+      <th> Name </th>
+      <th> Value</th>
       <th> Restaurant </th>
     </tr>
   </thead>
   <body>
-    <% @products.each do |p|%>
+    <% @products.each do |p| %>
       <tr>
         <th><%= p.name %></th>
         <th><%= p.value %></th>
@@ -18,3 +18,4 @@
     <% end %>
   </body>
 </table>
+
