--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,2 +1,25 @@
-<h1>Home#index</h1>
-<p>Find me in app/views/home/index.html.erb</p>
+<h1> HOME </h1>
+<p> Hello <%= @email%></p>
+
+<% if user_signed_in? %>
+  <% if current_user.restaurant? %>
+    <p> Seus produtos, <%= current_user.restaurant.name %></p>
+    <table>
+      <thead>
+        <tr>
+          <th>Name</th>
+          <th>Value</th>
+        </tr>
+      </thead>
+
+      <tbody>
+        <% current_user.restaurant.products.each do |product| %>
+          <tr>
+            <td> <%=  product.name %> </td>
+            <td> <%=  product.value %> </td>
+          </tr>
+        <% end %>
+      </tbody>
+    </table>
+  <% end %>
+<% end %>
